force-app/main/default/objects/ssot__KnowledgeArticleVersion__dlm/fields/Article_Body_c__c.field-meta.xml
<CustomField>
    <fullName>Article_Body_c__c</fullName>
    <label>Article Body</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Article Body</labelOverride>
        <masterLabel>Article Body</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>