force-app/main/default/objects/ssot__KnowledgeArticleVersion__dlm/fields/Audience_c__c.field-meta.xml
<CustomField>
    <fullName>Audience_c__c</fullName>
    <label>Audience</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Audience</labelOverride>
        <masterLabel>Audience</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>