force-app/main/default/objects/ssot__KnowledgeArticleVersion__dlm/fields/Chat_Answer_c__c.field-meta.xml
<CustomField>
    <fullName>Chat_Answer_c__c</fullName>
    <label>Chat Answer</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Chat Answer</labelOverride>
        <masterLabel>Chat Answer</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>