force-app/main/default/objects/ssot__KnowledgeArticleVersion__dlm/fields/Sub_Category_c__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category_c__c</fullName>
    <label>Sub-Category</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Sub-Category</labelOverride>
        <masterLabel>Sub-Category</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>