force-app/main/default/objects/ssot__KnowledgeArticleVersion__dlm/fields/Team_Category_c__c.field-meta.xml
<CustomField>
    <fullName>Team_Category_c__c</fullName>
    <label>Team Category</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Team Category</labelOverride>
        <masterLabel>Team Category</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>